# evm-watchtower

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: index.html  styles.css
evm_watchtower/: app.py  auth.py  chains.py  cli.py  monitor.py  parser.py  rpc.py  store.py  telegram.py
evm_watchtower/static/: app.js  index.html  styles.css
examples/: docker-compose.yml
tests/: test_auth.py  test_monitor.py  test_parser.py  test_store.py
